tests/ui/field_with_and_arbitrary.stderr
error: `arbitrary` and `with` are mutually exclusive on a field — `with = "mod"` already provides `arbitrary` via `mod::arbitrary`
 --> tests/ui/field_with_and_arbitrary.rs:5:28
  |
5 |   #[quickcheck(with = "m", arbitrary = "f")]
  |                            ^^^^^^^^^
